# iot

./: .gitignore  Cross.toml
rust-opencv/: Cargo.toml  Cross.toml
rust-opencv/src/: main.rs
sense-hat/: Cargo.toml  Cross.toml  Dockerfile  Dockerfile.aarch64  Dockerfile.arm7  README.md  opencv.pc
sense-hat/src/: daily.rs  errors.rs  joystick.rs  main.rs  manager.rs
sense-hat/src/led/: mod.rs  screen.rs
sense-hat/src/sensors/: atmospheric.rs
