[package]
name = "sense-hat"
version = "0.1.0"
edition = "2021"

[dependencies]
# sense hat led
sensehat-screen = { version = "0.2.6", default-features = false, features = ["fonts", "linux-framebuffer", "scroll"] }
# sense hat humidity sensor
sensehat = { version = "1.1.1", default-features = false, features = ["humidity"], git = "https://github.com/nusairat/sensehat-rs.git", branch = "chore/fix-retrieve-error"}
# sense hat stick
sensehat-stick = { version = "0.1", default-features = false, features = ["linux-evdev"], git = "https://github.com/nusairat/sensehat-stick-rs.git" }

# logging stuffs
dotenv = "0.15.0"
pretty_env_logger = "=0.4.0"
log = "0.4.17"

# async runtime
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"

# time
chrono = "0.4.19"

# error handling
error-chain = "0.12.4"

# uuid support
uuid = { version =  "1.1.2", features = ["v4", "serde"] }
